registration complete and login till collect token

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     tools:context=".RegisterActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Registration"
@@ -23,23 +23,6 @@
         />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:hint="Username"
-        style="@style/Widget.BookMyTable.TextInputLayout"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditTextUserName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:layout_marginBottom="30dp"
-            android:maxLines="1"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -78,39 +61,29 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <LinearLayout
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:padding="4dp"
-        android:layout_marginBottom="30dp"
+        android:layout_margin="4dp"
+        android:hint="ConfirmPassword"
+        style="@style/Widget.BookMyTable.TextInputLayout"
         >
 
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextregConfirmPassword"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="SignUpAs"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:fontFamily="monospace"
-            android:gravity="center_vertical"
-            android:layout_weight="2"/>
-
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/userType"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:layout_marginBottom="30dp"
+            android:maxLines="1"
             />
-
-    </LinearLayout>
-
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonSignUp"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
