--- a/app/src/main/res/layout/activity_restaurant_add_foods.xml
+++ b/app/src/main/res/layout/activity_restaurant_add_foods.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RestaurantProfileActivity">
+    tools:context=".RestaurantAddFoodsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:background="@drawable/bgshadow">
 
         <ImageView
-            android:id="@+id/imageViewRestaurant"
+            android:id="@+id/imageViewFood"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:src="@mipmap/ic_launcher"
@@ -39,7 +39,6 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +53,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:padding="10dp"
-                android:hint="Name"
+                android:hint="FoodName"
                 android:layout_height="50dp"
                 android:enabled="false"
                 />
@@ -76,7 +75,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:padding="10dp"
-                android:hint="Phone"
+                android:hint="Price"
                 android:layout_height="50dp"
                 android:enabled="false"
                 />
@@ -94,21 +93,32 @@
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="3"
             >
-            <EditText
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_toEndOf="@+id/selectCategory"
+                android:layout_alignParentStart="true"
+                android:hint="Select Category:"
+                android:textSize="18sp"
+                android:padding="10dp"
+                />
+
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/selectCategory"
+                android:layout_width="120dp"
                 android:padding="10dp"
                 android:hint="Location"
                 android:layout_height="50dp"
+                android:maxLines="1"
+                android:layout_alignParentEnd="true"
+                android:ellipsize="end"
                 android:enabled="false"
                 />
 
-            <ImageButton
-                android:layout_marginTop="15dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/edit"/>
 
         </RelativeLayout>
 
@@ -118,13 +128,14 @@
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:padding="10dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:hint="Description"
+            android:inputType="text"
             android:enabled="false"
             android:layout_height="50dp"/>
 
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/saveFood"
             android:layout_marginTop="20dp"
             android:layout_width="120dp"
             android:layout_height="60dp"
@@ -140,6 +151,5 @@
 
 
     </LinearLayout>
-
 
 </LinearLayout>
