--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -80,7 +80,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="RestaurantList"
+                        android:text="RequestList"
                         android:textSize="18sp"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/colorPrimary"
