--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Log In"
+        android:text="@string/login"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="50sp"
         android:gravity="center"
@@ -85,24 +85,58 @@
 </LinearLayout>
 
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="50dp"
+    >
     <TextView
         android:id="@+id/textViewSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Don't have an account?|Sign Up"
+        android:text="@string/signup"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="15sp" />
+
     <TextView
-        android:id="@+id/textViewforgotPassword"
+        android:id="@+id/textViewSignUpRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password?"
+        android:text="Restaurant"
         android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp"/>
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="30dp"
-        android:textSize="15dp"
-        />
+        >
+
+        <TextView
+            android:id="@+id/textViewforgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot Password?"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            />
+
+        <TextView
+            android:id="@+id/FAQ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:text="|FAQ"
+            android:textColor="@color/colorPrimaryDark"
+            />
+
+
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
