--- a/app/src/main/res/layout/restaurant_request_list_item.xml
+++ b/app/src/main/res/layout/restaurant_request_list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="5dp"
     >
 
     <LinearLayout
@@ -12,16 +13,10 @@
 
         >
 
-    <ImageView
-        android:id="@+id/restaurantImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@android:color/transparent"
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
 
