--- a/app/src/main/res/layout/activity_faq_list.xml
+++ b/app/src/main/res/layout/activity_faq_list.xml
@@ -4,14 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FaqListActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"
-        >
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -23,14 +19,33 @@
             android:layout_marginTop="10dp"
             />
 
+
+
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="40dp"
             android:id="@+id/recyclerViewFAQ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/faq_list_item"
+            android:padding="10dp"
             />
 
-    </LinearLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/faqAddBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:backgroundTint="@color/colorPrimaryDark"
+        app:borderWidth="0dp"
+        android:src="@drawable/addicon"
+        android:padding="10dp"
+        android:layout_margin="24dp"
+        app:fabSize="normal"
+        app:tint="@color/colorWhite"
+        android:visibility="gone"
+        />
 
 
 
